多分少しの変更とログイン画面

--- a/game-page.html
+++ b/game-page.html
@@ -31,6 +31,7 @@
             display: flex;
             align-items: center;
             gap: 1.5rem;
+            margin-left: 400px;
         }
 
         .logo {
@@ -47,6 +48,7 @@
             color: #00bfff; 
             }
         }
+
         
         /* Custom scrollbar for better visual integration */
         .carousel-track, .game-carousel-track {
@@ -586,6 +588,7 @@
 
         <header class="header-main">
             <div class="logo"><a href="index.html">GG STORE</a></div>
+        </nav>
             <nav class="header-nav">
                 <a href="#">ストア</a>
                 <a href="#">コミュニティ</a>
@@ -593,8 +596,7 @@
             </nav>
             
             <div class="header-actions">
-                <input type="search" placeholder="Search..." class="search-bar">
-                <span>🛒</span> <span>👤</span> 
+                <input type="search" placeholder="Search..." class="search-bar"> 
             </div>
 
             <div class="header-login">
