indexとloginをつなげる

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
         </nav>
         <div class="header-actions">
             <input type="search" placeholder="Search..." class="search-bar">
-            <span>🛒</span> <span>👤</span> </div>
+            <span>🛒</span> <span><a href="login.html">👤</a></span> </div>
     </header>
 
     <main>
