--- a/game-page.html
+++ b/game-page.html
@@ -35,7 +35,7 @@
         <!-- Hero Section -->
         <section class="mb-16">
             <div class="relative rounded-lg overflow-hidden shadow-2xl">
-                <img src="photos for game page/GOW.jpg" alt="God of War Ragnarok" class="w-full h-auto object-cover">
+                <img src="photos/GOW.jpg" alt="God of War Ragnarok" class="w-full h-auto object-cover">
                 <!-- Overlay content -->
                 <div class="absolute bottom-10 left-10">
                     <h1 class="text-3xl md:text-5xl font-black uppercase mb-4 text-shadow-lg">God of War</h1>
@@ -64,7 +64,7 @@
                     
                     <!-- Game Card 1 -->
                     <div class="bg-gray-900 rounded-lg overflow-hidden shadow-lg group w-1/2 sm:w-1/3 md:w-1/4 lg:w-1/5 flex-shrink-0 snap-start">
-                        <img src="photos for game page/READ DEAD.jfif" alt="Game 1" class="w-full h-auto object-cover group-hover:scale-105 transition-transform duration-300">
+                        <img src="photos/READ DEAD.jfif" alt="Game 1" class="w-full h-auto object-cover group-hover:scale-105 transition-transform duration-300">
                         <div class="p-4">
                             <h3 class="font-semibold text-lg mb-2 truncate">Red Dead Redemption 2</h3>
                             <button class="w-full bg-purple-700 text-white font-semibold py-2 px-4 rounded-lg text-sm hover:bg-purple-800 transition duration-300">
@@ -75,7 +75,7 @@
 
                     <!-- Game Card 2 -->
                     <div class="bg-gray-900 rounded-lg overflow-hidden shadow-lg group w-1/2 sm:w-1/3 md:w-1/4 lg:w-1/5 flex-shrink-0 snap-start">
-                        <img src="photos for game page/ELDEN RING.jfif" alt="Game 2" class="w-full h-auto object-cover group-hover:scale-105 transition-transform duration-300">
+                        <img src="photos/ELDEN RING.jfif" alt="Game 2" class="w-full h-auto object-cover group-hover:scale-105 transition-transform duration-300">
                         <div class="p-4">
                             <h3 class="font-semibold text-lg mb-2 truncate">Elden Ring</h3>
                             <button class="w-full bg-purple-700 text-white font-semibold py-2 px-4 rounded-lg text-sm hover:bg-purple-800 transition duration-300">
@@ -86,7 +86,7 @@
 
                     <!-- Game Card 3 -->
                     <div class="bg-gray-900 rounded-lg overflow-hidden shadow-lg group w-1/2 sm:w-1/3 md:w-1/4 lg:w-1/5 flex-shrink-0 snap-start">
-                        <img src="photos for game page/witcher 3.jfif" alt="Game 3" class="w-full h-auto object-cover group-hover:scale-105 transition-transform duration-300">
+                        <img src="photos/witcher 3.jfif" alt="Game 3" class="w-full h-auto object-cover group-hover:scale-105 transition-transform duration-300">
                         <div class="p-4">
                             <h3 class="font-semibold text-lg mb-2 truncate">The Witcher 3</h3>
                             <button class="w-full bg-purple-700 text-white font-semibold py-2 px-4 rounded-lg text-sm hover:bg-purple-800 transition duration-300">
@@ -97,7 +97,7 @@
 
                     <!-- Game Card 4 -->
                     <div class="bg-gray-900 rounded-lg overflow-hidden shadow-lg group w-1/2 sm:w-1/3 md:w-1/4 lg:w-1/5 flex-shrink-0 snap-start">
-                        <img src="photos for game page/Assassin’s Creed.jfif" alt="Game 4" class="w-full h-auto object-cover group-hover:scale-105 transition-transform duration-300">
+                        <img src="photos/Assassin’s Creed.jfif" alt="Game 4" class="w-full h-auto object-cover group-hover:scale-105 transition-transform duration-300">
                         <div class="p-4">
                             <h3 class="font-semibold text-lg mb-2 truncate">Assassin's Creed</h3>
                             <button class="w-full bg-purple-700 text-white font-semibold py-2 px-4 rounded-lg text-sm hover:bg-purple-800 transition duration-300">
@@ -108,7 +108,7 @@
 
                     <!-- Game Card 5 -->
                     <div class="bg-gray-900 rounded-lg overflow-hidden shadow-lg group w-1/2 sm:w-1/3 md:w-1/4 lg:w-1/5 flex-shrink-0 snap-start">
-                        <img src="photos for game page/Dark Souls III .jfif" alt="Game 5" class="w-full h-auto object-cover group-hover:scale-105 transition-transform duration-300">
+                        <img src="photos/Dark Souls III .jfif" alt="Game 5" class="w-full h-auto object-cover group-hover:scale-105 transition-transform duration-300">
                         <div class="p-4">
                             <h3 class="font-semibold text-lg mb-2 truncate">Dark Souls III</h3>
                             <button class="w-full bg-purple-700 text-white font-semibold py-2 px-4 rounded-lg text-sm hover:bg-purple-800 transition duration-300">
@@ -119,7 +119,7 @@
 
                     <!-- Game Card 6 -->
                     <div class="bg-gray-900 rounded-lg overflow-hidden shadow-lg group w-1/2 sm:w-1/3 md:w-1/4 lg:w-1/5 flex-shrink-0 snap-start">
-                        <img src="photos for game page/RE VILLAGE.jfif" alt="Game 6" class="w-full h-auto object-cover group-hover:scale-105 transition-transform duration-300">
+                        <img src="photos/RE VILLAGE.jfif" alt="Game 6" class="w-full h-auto object-cover group-hover:scale-105 transition-transform duration-300">
                         <div class="p-4">
                             <h3 class="font-semibold text-lg mb-2 truncate">Resident Evil Village</h3>
                             <button class="w-full bg-purple-700 text-white font-semibold py-2 px-4 rounded-lg text-sm hover:bg-purple-800 transition duration-300">
