--- a/gg_admin_page.html
+++ b/gg_admin_page.html
@@ -48,7 +48,7 @@
     <!-- Sidebar (Visible on Desktop, Toggleable on Mobile) -->
     <div id="sidebar" class="flex-shrink-0 w-64 card rounded-none border-t-0 border-l-0 border-b-0 p-4 transition-all duration-300 ease-in-out z-30 fixed lg:static lg:translate-x-0 h-full -translate-x-full">
         <div class="flex items-center justify-between h-16 px-4">
-            <h1 class="text-xl font-extrabold text-white">GG <span style="color:var(--accent-blue);">ADMIN</span></h1>
+            <h1 class=><span style="color:var(--accent-blue);">GG ADMIN</span></h1>
             <button id="sidebar-close" class="lg:hidden text-white text-xl p-2 rounded hover:text-red-500">
                 <i class="fas fa-times"></i>
             </button>
