--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                     <button id="btn-en">EN</button>
                     <button id="btn-ja" class="active">JA</button>
                 </div>
-                <span><a href=cart.html>🛒</a></span> <span><a href=login.html>👤</a></span> 
+                <span><a href="cart.html">🛒</a></span> <span><a href="login2.php">👤</a></span> 
             </div>
         </div>
     </header>
